# hdeps

./: .gitignore  .vars.ini  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg
.github/workflows/: build.yml
hdeps/: cache.py  checkout.py  cli.py  compatibility.py  markers.py  projects.py  requirements.py  resolution.py  session.py  types.py
hdeps/tests/: __init__.py  __main__.py  _fake_session.py  cache.py  cli_scenarios.py  compatibility.py  markers.py  projects.py  requirements.py  resolution.py  session.py
hdeps/tests/demo_project/: Makefile  setup.cfg
hdeps/tests/fixtures/: batman-1.0-py3-none-any.whl.metadata  batman-2.0-py3-none-any.whl.metadata  batman.html  circulardependencya.html  circulardependencyb.html  joker-1.0-py3-none-any.whl.metadata  joker.html  pyver.html  robin-1.0-py3-none-any.whl.metadata  robin.html
hdeps/tests/scenarios/: bad_py_version.txt  batman_1.txt  batman_1_install_order.txt  batman_1_no_reuse.txt  batman_1_paths_to_batman.txt  batman_1_reuse.txt  batman_have_dep_nonpublic.txt  batman_have_nonpublic.txt  batman_have_public.txt  circular_dependency_sdist.txt  color_conflict.txt  color_legend.txt  markers-in-feed.txt  missing_dep.txt  prerelease-dep-not-allowed.txt  prerelease-dep.txt  prerelease-flag-allow.txt  prerelease-flag-if-necessary.txt  prerelease-flag-never.txt  prerelease-not-allowed.txt  prerelease-reuse.txt  requirements_parsing_ignore_logging.txt  requirements_parsing_ignore_logging.txt.testdata  requires-python.txt
scripts/: fixture-metadata-hashes
