[metadata]
name = hdeps
description = Simple what-if dep resolution for python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/hdeps/hdeps/
author = Tim Hatch
author_email = tim@timhatch.com

[options]
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm < 8; python_version<'3.8'
    setuptools_scm >= 8; python_version>='3.8'
    setuptools >= 65
include_package_data = true
install_requires =
    appdirs
    cachecontrol[filecache]
    click
    keke
    metadata-please
    pypi-simple
    requests
    seekablehttpfile
    indexurl
    packaging
    vmodule
    # tpe-prio

[options.extras_require]
dev =
    black == 23.12.1
    checkdeps == 0.9.0
    flake8 == 7.0.0
    mypy == 1.8.0
    tox == 4.12.1
    twine == 4.0.2
    ufmt == 2.3.0
    usort == 1.0.7
    wheel == 0.42.0
test =
    coverage >= 6
    parameterized

[options.entry_points]
console_scripts =
    hdeps=hdeps.cli:main

[check]
metadata = true
strict = true

[coverage:run]
branch = True
include = hdeps/*
omit = hdeps/tests/*

[coverage:report]
fail_under = 70
precision = 1
show_missing = True
skip_covered = True

[mypy]
ignore_missing_imports = True

[tox:tox]
envlist = py{310,311,312,313}, coverage

[testenv]
deps = .[test]
allowlist_externals = make
commands =
    make test
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}

[testenv:coverage]
deps = coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine
    coverage report
depends =
    py{310,311,312,313}

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
